<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">数链</string>
    <string name="item_home">首页</string>
    <string name="item_quotation">行情</string>
    <string name="item_transaction">交易</string>
    <string name="item_contract">合约</string>
    <string name="item_assets">资产</string>
    <string name="item_personal">个人中心</string>
    <string name="login">注册</string>
    <string name="login1">NCE系统登录</string>
    <string name="login2">请输入助记词，用一个空格分离每个单词</string>
    <string name="login3">设置支付密码</string>
    <string name="login4">确认支付密码</string>
    <string name="login5">改为导入秘钥</string>
    <string name="login6">登录</string>
    <string name="login7">请输入用户名</string>
    <string name="login8">设置支付密码</string>
    <string name="login9">重复密码</string>
    <string name="login10">登录</string>
    <string name="login11">NCE系统注册</string>
    <string name="login12">完成</string>
    <string name="login13">注册成功，可长安复制</string>
    <string name="login14">邀请码</string>
    <string name="login15">会员资料</string>
    <string name="login16">改为助记词</string>
    <string name="login17">扫描或填写邀请码</string>
    <string name="login18">改为导入助记词</string>
    <string name="login19">支付密码不一致</string>
    <string name="login20">返回</string>
    <string name="login21">NCE服务协议</string>
    <string name="login23">导入助记词</string>
    <string name="login26">密码必须大于8位,并包含大小字母和数字</string>
    <string name="login27">输入两次密码不一致</string>
    <string name="login35">请同意用户服务协议</string>
    <string name="hy_code_content">把二维码（有效期15分钟）发给您的朋友，\n帮您预约</string>
    <string name="hy_code_expire">二维码已过期</string>
    <string name="assure">担保</string>
    <string name="choose_data">选择数据</string>
    <string name="update">立即更新</string>
    <string name="private1">私募</string>
    <string name="assets8">币种</string>
    <string name="assets22">收益余额:0.0</string>
    <string name="main17">划转</string>
    <string name="hy2">开通合约</string>
    <string name="hy4">数量</string>
    <string name="hy5">开通</string>
    <string name="hy6">合约明细</string>
    <string name="hy7">收益明细</string>
    <string name="hy16">预约明细</string>
    <string name="hy17">担保明细</string>
    <string name="hy8">类型</string>
    <string name="hy9">状态</string>
    <string name="hy10">合约帐户总权益</string>
    <string name="hy11">合约数量</string>
    <string name="hy12">预期收益</string>
    <string name="hy13">合约规则</string>
    <string name="hy14">风险提示</string>
    <string name="hy15">币种</string>
    <string name="pop1">开启复投</string>
    <string name="transf_Profit">划转收益</string>
    <string name="transf_Profit_tip">请输入划转额度</string>
    <string name="prize1">时间</string>
    <string name="prize2">花费(NCE)</string>
    <string name="prize3">奖励(NCE)</string>
    <string name="time01">分钟</string>
    <string name="time02">1小时</string>
    <string name="time03">1日</string>
    <string name="time031">1周</string>
</resources>