<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/spnner_pop_shape"
    >
    <LinearLayout
        android:layout_width="@dimen/dp_65"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/spnner_font_style_bold"
            android:id="@+id/oneday_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/time01"
             />

        <ImageView
            android:layout_width="@dimen/dp_65"
            android:layout_height="0.1dp"
            android:background="@color/white15" />

        <TextView
            android:id="@+id/servenday_tv"
            style="@style/spnner_font_style_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/time02"
             />

        <ImageView
            android:layout_width="@dimen/dp_65"
            android:layout_height="0.1dp"
            android:background="@color/white15" />

        <TextView
            android:id="@+id/thirtyday_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/time03"
            style="@style/spnner_font_style_bold" />

        <ImageView
            android:layout_width="@dimen/dp_65"
            android:layout_height="0.1dp"
            android:background="@color/white15" />

        <TextView
            android:id="@+id/yearday_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/time031"
            style="@style/spnner_font_style_bold" />
    </LinearLayout>
</RelativeLayout>