<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/vf_themecolor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.zhy.android.percent.support.PercentRelativeLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_heightPercent="49%w"
        android:layout_marginLeft="@dimen/sp_16"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@mipmap/heyuebg">
        <Button
            android:id="@+id/eye_openclose_btn"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/eye_close_btn"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25">
        </Button>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_marginTopPercent="6.6%w"
            android:layout_centerHorizontal="true"
            app:layout_textSizePercent="3.96%w"
            android:textColor="@color/white"
            android:text="@string/hy10" />
        <TextView
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_marginTopPercent="13.6%w"
            android:layout_centerHorizontal="true"
            app:layout_textSizePercent="6.8%w"
            android:textColor="@color/white"
            />
        <com.zhy.android.percent.support.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_widthPercent="50%w"
            android:layout_alignParentBottom="true">
            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_textSizePercent="8%w"
                android:layout_centerHorizontal="true"
                app:layout_marginBottomPercent="30.6%w"
                android:textColor="@color/white"
                android:text="@string/hy11"/>
            <TextView
                android:id="@+id/number1"
                android:layout_marginLeft="@dimen/dp_55"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_textSizePercent="8%w"
                android:layout_centerHorizontal="true"
                app:layout_marginTopPercent="12.8%w"
                android:textColor="@color/white"
                />
        </com.zhy.android.percent.support.PercentRelativeLayout>
        <com.zhy.android.percent.support.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_widthPercent="50%w"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_textSizePercent="8%w"
                android:layout_centerHorizontal="true"
                app:layout_marginBottomPercent="30.6%w"
                android:textColor="@color/white"
                android:text="@string/hy12"/>
            <TextView
                android:id="@+id/profit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_textSizePercent="8%w"
                android:layout_centerHorizontal="true"
                app:layout_marginTopPercent="12.8%w"
                android:textColor="@color/white"
                />
        </com.zhy.android.percent.support.PercentRelativeLayout>
    </com.zhy.android.percent.support.PercentRelativeLayout>

    <com.zhy.android.percent.support.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout"
        android:visibility="visible"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_17"
        android:layout_marginRight="@dimen/dp_17"
        android:background="@drawable/white_shape"
        app:layout_marginTopPercent="1.8%w">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_marginLeftPercent="4.7%w"
            app:layout_textSizePercent="3.7%w"
            android:textColor="@color/black4"
            android:text="@string/transf_Profit" />
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dp_25"
            android:focusable="true"
            app:layout_marginLeftPercent="3.7%w"
            app:layout_marginTopPercent="6.5%w"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/bz_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:textSize="@dimen/dp_12"
                android:text="@string/assets8" />
            <EditText
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_toRightOf="@+id/bz_tv"
                android:id="@+id/transfer_profit_ev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_12"

                android:inputType="numberDecimal"
                android:background="@null"
                android:textColor="@color/white15"
                android:hint="@string/transf_Profit_tip"
                android:textColorHint="@color/white15"
                android:text="" />
        </RelativeLayout>
        <TextView
            android:id="@+id/transfer_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_marginTopPercent="1.8%w"
            android:text="@string/main17"
            app:layout_marginLeftPercent="75.7%w"
            android:gravity="center"
            android:textColor="@color/blue"
            android:background="@drawable/btn_no_bg"/>
        <View
            app:layout_marginTopPercent="12.8%w"
            android:padding="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/white1"></View>
        <TextView
            app:layout_marginTopPercent="16.5%w"
            android:id="@+id/profit_qutoe_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_marginLeftPercent="4.7%w"
            app:layout_textSizePercent="3.7%w"
            android:textColor="@color/black4"
            android:text="@string/assets22" />
    </com.zhy.android.percent.support.PercentRelativeLayout>

    <com.zhy.android.percent.support.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout"
        app:layout_marginTopPercent="29.8%w">
        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_marginLeftPercent="16.7%w"
            app:layout_textSizePercent="3.7%w"
            android:textColor="@color/white15"
            android:text="@string/hy2" />
        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_marginLeftPercent="16.7%w"
            app:layout_textSizePercent="3.7%w"
            android:text="@string/hy13"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_marginLeftPercent="16.7%w"
            app:layout_textSizePercent="3.7%w"
            android:text="@string/hy14"
            android:visibility="gone"/>
    </com.zhy.android.percent.support.PercentRelativeLayout>
    <com.zhy.android.percent.support.PercentRelativeLayout
        android:id="@+id/layout2"
        android:visibility="gone"
        android:layout_below="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_marginTopPercent="40.9%w">
        <TextView
            android:id="@+id/et_assets"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_widthPercent="58.9%w"
            app:layout_heightPercent="10.4%w"
            app:layout_marginLeftPercent="16%w"
            android:background="@drawable/white_shape"
            app:layout_textSizePercent="3.1%w"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_10"
            android:text=""/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/et_assets"
            app:layout_marginLeftPercent="2.65%w"
            android:text="@string/hy15"
            app:layout_textSizePercent="3.1%w"/>
    </com.zhy.android.percent.support.PercentRelativeLayout>
    <com.zhy.android.percent.support.PercentRelativeLayout
        android:id="@+id/layout3"
        android:layout_below="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_marginTopPercent="37.7%w">
        <TextView
            android:id="@+id/et_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_widthPercent="58.9%w"
            app:layout_heightPercent="10.4%w"
            app:layout_marginLeftPercent="16%w"
            android:background="@drawable/white_shape"
            android:paddingLeft="@dimen/dp_10"
            app:layout_textSizePercent="3.1%w"
            android:gravity="center_vertical"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/et_number"
            app:layout_marginLeftPercent="2.65%w"
            android:textColor="@color/white15"
            android:text="@string/hy4"
            app:layout_textSizePercent="3.1%w"/>
    </com.zhy.android.percent.support.PercentRelativeLayout>
    <com.bronet.blockchain.view.MyScrollView
        android:id="@+id/scr_text2"
        android:layout_below="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_heightPercent="16.6%w"
        app:layout_widthPercent="71.2%w"
        android:background="@drawable/white_shape"
        app:layout_marginTopPercent="35.9%w"
        android:layout_centerHorizontal="true"
        android:visibility="gone">
        <TextView
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.bronet.blockchain.view.MyScrollView>

    <TextView
        android:id="@+id/btn_ok"
        android:layout_below="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_marginTopPercent="60%w"
        app:layout_widthPercent="71.9%w"
        app:layout_heightPercent="11.8%w"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_press_btn"
        android:text="@string/hy5"
        android:textColor="@color/white"
        app:layout_textSizePercent="4.3%w"
        android:gravity="center"/>
    <com.zhy.android.percent.support.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_widthPercent="68.5%w"
        android:layout_centerHorizontal="true"
        app:layout_marginTopPercent="53%w"
        android:layout_below="@+id/layout"
        android:orientation="horizontal">
        <com.zhy.android.percent.support.PercentLinearLayout
            android:id="@+id/btn_is"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_heightPercent="8%w">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_widthPercent="100%h"
                app:layout_heightPercent="100%h"
                android:background="@drawable/btn_sc_selector"/>
            <TextView
                android:layout_below="@+id/layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_textSizePercent="60%h"
                android:textColor="@drawable/text_black_blue_selector"
                android:text="@string/pop1"
                android:padding="@dimen/dp_3"
                android:layout_gravity="center_vertical"/>
        </com.zhy.android.percent.support.PercentLinearLayout>
    </com.zhy.android.percent.support.PercentRelativeLayout>
    <com.zhy.android.percent.support.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout"
        app:layout_marginTopPercent="70%w">

        <TextView
            android:id="@+id/btn_hy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:text="@string/hy6"
            android:textColor="@drawable/text_black_blue_selector"
            app:layout_marginLeftPercent="3%w" />
        <TextView
            android:id="@+id/btn_mx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hy7"
            android:textColor="@drawable/text_black_blue_selector"
            app:layout_marginLeftPercent="24.9%w"
            android:padding="@dimen/dp_10"/>
        <TextView
            android:id="@+id/btn_yy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hy16"
            android:textColor="@drawable/text_black_blue_selector"
            app:layout_marginLeftPercent="45.9%w"
            android:padding="@dimen/dp_10"/>
        <TextView
            android:id="@+id/btn_db"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hy17"
            android:textColor="@drawable/text_black_blue_selector"
            app:layout_marginLeftPercent="67.5%w"
            android:padding="@dimen/dp_10"/>
    </com.zhy.android.percent.support.PercentRelativeLayout>
    <com.zhy.android.percent.support.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout"
        app:layout_marginTopPercent="80%w"
        android:id="@+id/layout1">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_widthPercent="91%w"
            app:layout_heightPercent="7.5%w"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/recyclerView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hy8"
            android:textColor="@color/black4"
            app:layout_marginLeftPercent="5.7%w"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hy9"
            android:textColor="@color/black4"
            app:layout_marginLeftPercent="80.4%w"
            android:layout_centerVertical="true"/>

    </com.zhy.android.percent.support.PercentRelativeLayout>

    <!--<android.support.v7.widget.RecyclerView
        android:id="@+id/re111"
        android:layout_width="match_parent"
        android:layout_h     android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        app:layout_marginTopPercent="130%w"></android.support.v7.widget.RecyclerView>

-->
</com.zhy.android.percent.support.PercentRelativeLayout>