<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp_10"
    android:layout_marginRight="@dimen/dp_20"
    android:layout_marginLeft="@dimen/dp_20"
    android:orientation="vertical">
        <RelativeLayout
            android:layout_marginTop="@dimen/dp_3"
            android:layout_width="match_parent"
            android:background="@drawable/node_item_vf"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/prize_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:text="@string/prize1"
                android:textColor="@color/red"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/prize_consume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/prize2"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:textSize="@dimen/sp_14"
                android:textColor="@color/green"
                android:layout_alignParentRight="true"
                android:id="@+id/prize_time"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prize3"/>
        </RelativeLayout>

</LinearLayout>